# projectmercury

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  appveyor.yml
cmake/: FindOrbiterSDK.cmake  FindXRSound.cmake  orbiter.cmake
docs/: conf.py  index.rst
docs/dev/: documentation.rst
docs/user/: history.rst
project_mercury/: CMakeLists.txt
project_mercury/include/: Atlas.h  Matrix.h  Mercury_Capsule.h  Mercury_Sequencer.h  Redstone.h  Vectors.h  common_addon.h  mercury_systems.h  multi_stage5.h  orbitelements.h  resource.h
project_mercury/res/: Resources.rc
project_mercury/res/config/: Mercury_Atlas.cfg  Mercury_Redstone.cfg
project_mercury/res/meshes/: H-34.msh  Merc-Pod.msh  merc_Aurora7.msh  merc_DrogueCover.msh  merc_ExplosiveBolt.msh  merc_Faith7.msh  merc_Freedom7.msh  merc_Freedom7II.msh  merc_Friendship7.msh  merc_LandingBag.msh  merc_LibertyBell7.msh  merc_Sigma7.msh  merc_SnorkelCover.msh  merc_adaptcover1.msh  merc_adaptcover2.msh  merc_adaptcover3.msh  merc_adaptring1.msh  merc_adaptring2.msh  merc_adaptring3.msh  merc_anthouse.msh  merc_atl_adapt.msh  merc_atl_boost.msh  merc_atl_main.msh  merc_bag.msh  merc_beacon.msh  merc_chute.msh  merc_chute1.msh  merc_chute2.msh  merc_chutes.msh  merc_drogue.msh  merc_drogues.msh  merc_dye.msh  merc_filter.msh  merc_filter2.msh  merc_filterblack.msh  merc_redstone.msh  merc_retro.msh  merc_retrocover1.msh  merc_retrocover2.msh  merc_retrocover3.msh  (+4 more)
project_mercury/res/scenarios/: Mercury Atlas.scn  Mercury Redstone.scn
project_mercury/res/textures/: H-34-1.dds  H-34-2.dds  H-34-3.dds  H-34-4.dds  H-34-5.dds  H-34-6.dds  H-34-7.dds  H-34-8.dds  merc_AdapterRidge.dds  merc_AntRidge.dds  merc_Aurora7.dds  merc_BRailMap.dds  merc_BW.dds  merc_BY.dds  merc_Crack.dds  merc_Dialec.dds  merc_Faith7.dds  merc_Flag.dds  merc_Foil.dds  merc_FoilWindow.dds  merc_Freedom7.dds  merc_Freedom7II.dds  merc_Friendship7.dds  merc_Glass.dds  merc_LibertyBell7.dds  merc_MBRail1.dds  merc_MBRail2.dds  merc_Metal.dds  merc_Orange.dds  merc_PYThr.dds  merc_Porthole.dds  merc_Ridges.dds  merc_RollThst.dds  merc_Scanner.dds  merc_Scope.dds  merc_Screw.dds  merc_Sigma7.dds  merc_Snorkel.dds  merc_TRailMap.dds  merc_TopBoxes.dds  (+14 more)
project_mercury/src/: Mercury_Atlas.cpp  Mercury_Redstone.cpp  mercury_systems.cpp
sound_test/: CMakeLists.txt
sound_test/res/config/: SoundTest.cfg
sound_test/res/scenarios/: SoundTest.scn
sound_test/src/: MyVessel.cpp  MyVessel.h  main.cpp
